Fix window overflow

--- a/less/core.less
+++ b/less/core.less
@@ -12,8 +12,9 @@
 
 html, body {
   height: 100%;
-  padding: 0px;
   margin: 0px;
+  overflow: hidden;
+  padding: 0px;
 }
 
 .flex-container {
@@ -66,8 +67,11 @@ html, body {
 
 footer {
   bottom: 0;
+  font-family: HelveticaNeue-Light,sans-serif;
+  font-size: 13px;
   color: white;
-  background-color: @vsc-blue;
+  background-color: @sc-blue;
+  padding-left: 5px; 
   position: absolute;
   width: 100%;
 }
